--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rol",
   "description": "Simple, powerful, and extendable access control in Node and the browser",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "homepage": "https://github.com/sackio/rol",
   "author": {
     "name": "Ben Sack",
@@ -31,7 +31,10 @@
     "grunt-contrib-jshint": "~0.6.4",
     "grunt-contrib-nodeunit": "~0.2.0",
     "grunt-contrib-watch": "~0.5.3",
-    "grunt": "~0.4.5"
+    "grunt": "~0.4.5",
+    "async": "*",
+    "underscore": "*",
+    "jsbelt": "*"
   },
   "keywords": []
 }
